--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "devextreme-react": "20.2.4",
     "node-sass": "^4.14.1",
     "react": "^17.0.1",
+    "react-d3-tree": "^2.0.0",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
@@ -50,6 +51,8 @@
     ]
   },
   "devDependencies": {
-    "@types/react-router-dom": "^5.1.6"
+    "@types/numeral": "0.0.28",
+    "@types/react-router-dom": "^5.1.6",
+    "antd-img-crop": "^3.13.2"
   }
 }
